Braintri-2 : Added basic modules structure

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@
 /build
 /captures
 .externalNativeBuild
+app/libs/
+app/src/main/res/drawable/
+data/libs/
+data/src/main/java/
+data/src/main/res/drawable/
