--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply from: '../config/quality.gradle'
 
 android {
     compileSdkVersion 25
@@ -19,13 +20,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
+
+    def dataDependencies = rootProject.ext.dataDependencies;
+    def commonDependencies = rootProject.ext.commonDependencies;
+    def testDependencies = rootProject.ext.testDependencies;
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    testCompile 'junit:junit:4.12'
+
+    testCompile testDependencies.jUnit
 }
