--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -19,13 +19,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_1_7
+        targetCompatibility = JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
+    def domainDependencies = rootProject.ext.domainDependencies;
+    def commonDependencies = rootProject.ext.commonDependencies;
+    def testDependencies = rootProject.ext.testDependencies;
+
+    compile project(':data')
+
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    testCompile 'junit:junit:4.12'
+
+    testCompile testDependencies.jUnit
 }
