--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -35,5 +35,11 @@ dependencies {
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
+    compile commonDependencies.dagger
+    annotationProcessor commonDependencies.daggerCompiler
+
+    compile commonDependencies.rxJava
+    compile commonDependencies.rxAndroid
+
     testCompile testDependencies.jUnit
 }
