--- a/config/dependencies.gradle
+++ b/config/dependencies.gradle
@@ -7,6 +7,7 @@ ext {
     rxJava = '2.0.9'
     rxAndroid = '2.0.1'
     rxAdapter = '1.0.0'
+    parceler = '1.1.6'
     //endregion
 
     //region Presentation dependencies
@@ -21,7 +22,7 @@ ext {
     //endregion
 
     //region Data dependencies
-
+    mapStruct = '1.1.0.Final'
     //endregion
 
     //region Testing dependencies
@@ -36,10 +37,14 @@ ext {
         rxJava: "io.reactivex.rxjava2:rxjava:${rxJava}",
         dagger: "com.google.dagger:dagger:${dagger}",
         daggerCompiler: "com.google.dagger:dagger-compiler:${dagger}",
+        gsonConverter: "com.squareup.retrofit2:converter-gson:${retrofit}",
+        parceler: "org.parceler:parceler-api:${parceler}",
+        parcelerAnnotation: "org.parceler:parceler:${parceler}",
     ]
 
     presentationDependencies = [
         recyclerView: "com.android.support:recyclerview-v7:${supportLibrary}",
+        cardView: "com.android.support:cardview-v7:${supportLibrary}",
         appCompat: "com.android.support:appcompat-v7:${supportLibrary}",
         design: "com.android.support:design:${supportLibrary}",
         support: "com.android.support:support-v4:${supportLibrary}",
@@ -49,7 +54,6 @@ ext {
         butterknife: "com.jakewharton:butterknife:${butterknife}",
         butterknifeCompiler: "com.jakewharton:butterknife-compiler:${butterknife}",
 
-        gsonConverter: "com.squareup.retrofit2:converter-gson:${retrofit}",
         okHttpInterceptor: "com.squareup.okhttp3:logging-interceptor:${okhttp}",
         rxAdapter: "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:${rxAdapter}"
     ]
@@ -59,7 +63,8 @@ ext {
     ]
 
     dataDependencies = [
-
+        mapStruct: "org.mapstruct:mapstruct:${mapStruct}",
+        mapStructProcessor: "org.mapstruct:mapstruct-processor:${mapStruct}",
     ]
 
     testDependencies = [
