Braintri-10 : Added tumblr posts handling for various types and displaying various posts contents

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,8 @@ dependencies {
     compile presentationDependencies.butterknife
     annotationProcessor presentationDependencies.butterknifeCompiler
 
+    compile presentationDependencies.picasso
+
     testCompile testDependencies.jUnit
     testCompile testDependencies.okhttpMockServer
 }
