--- a/config/dependencies.gradle
+++ b/config/dependencies.gradle
@@ -15,7 +15,9 @@ ext {
     dagger = '2.10'
     butterknife = '8.5.1'
     constraintLayout = '+'
+    picasso = "2.5.2"
     //endregion
+
 
     //region Domain dependencies
 
@@ -53,6 +55,8 @@ ext {
 
         butterknife: "com.jakewharton:butterknife:${butterknife}",
         butterknifeCompiler: "com.jakewharton:butterknife-compiler:${butterknife}",
+
+        picasso: "com.squareup.picasso:picasso:${picasso}",
 
         okHttpInterceptor: "com.squareup.okhttp3:logging-interceptor:${okhttp}",
         rxAdapter: "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:${rxAdapter}"
