Braintri-12 : Added splash activity to autonavigate to list if provided

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,5 @@ dependencies {
 
     testCompile testDependencies.jUnit
     testCompile testDependencies.okhttpMockServer
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
 }
