--- a/data/build.gradle
+++ b/data/build.gradle
@@ -51,5 +51,7 @@ dependencies {
     compile dataDependencies.mapStruct;
     annotationProcessor dataDependencies.mapStructProcessor;
 
+    testCompile testDependencies.modelCitizen
+
     testCompile testDependencies.jUnit
 }
