Braintri-21 : Added video type post handling with layout

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     compile presentationDependencies.support
     compile presentationDependencies.supportCompat
     compile presentationDependencies.constraintLayout
+    compile presentationDependencies.flexLayout
 
     compile presentationDependencies.okHttpInterceptor
     compile presentationDependencies.rxAdapter
