Braintri-23 : Added example unit test for presenter and added tests for usecases

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,4 +99,7 @@ dependencies {
 
     testCompile testDependencies.jUnit
     testCompile testDependencies.okhttpMockServer
+
+    testCompile testDependencies.mockito
+    testCompile testDependencies.modelCitizen
 }
